--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 </head>
 <body>
-<div class="hero">
+<div class="hero" onclick="window.location.href='tel:9001566'">
     <img src="assets/images/desktop.jpg" width="100%" height="100%" class="desktop">
     <img src="assets/images/mobile.jpg" width="100%" height="100%" class="mobile" hidden="">
     <a href="tel:9001566" type="button" class="btn btn-warning call_to_action">
