--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 </head>
 <body>
 <div class="hero" onclick="window.location.href='tel:9001566'">
-    <img src="assets/images/desktop.jpg" class="desktop">
-    <img src="assets/images/mobile.jpg" class="mobile" hidden="">
+<!--    <img src="assets/images/desktop.jpg" class="desktop">-->
+<!--    <img src="assets/images/mobile.jpg" class="mobile" hidden="">-->
     <a href="tel:9001566" type="button" class="btn btn-warning call_to_action">
         سارع بالاتصال و احصل على تفسير حلمك
         <i class="fas fa-phone"></i>
