--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>تفسير رؤيا سمك القرش في المنام</title>
+    <meta name="description" content="تفسير رؤيا سمك القرش في المنام">
+    <meta name="robots" content="index, follow" />
+<!--    <meta http-equiv="refresh" content="5;url='https://dream.brandtechnical.tech/'">-->
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -37,6 +40,30 @@
         سارع بالاتصال و احصل على تفسير حلمك
         <i class="fas fa-phone"></i>
     </a>
+    <div>
+        <ul class="social">
+            <li>
+                <a href="https://www.instagram.com/tafseer_ahlamq/">
+                    <i class="fab fa-instagram"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.twitter.com/tafseer_ahlamq/">
+                    <i class="fab fa-twitter"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.facebook.com/tafseer_ahlamq/">
+                    <i class="fab fa-facebook"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/tafseer_ahlamq/">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+            </li>
+        </ul>
+    </div>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
