--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
 </head>
 <body>
-<div class="hero" onclick="window.location.href='tel:9001566'">
-    <img src="assets/images/desktop.jpg" width="100%" height="100%" class="desktop">
-    <img src="assets/images/mobile.jpg" width="100%" height="100%" class="mobile" hidden="">
+<div class="hero">
+    <img src="assets/images/desktop.jpg" width="100%" height="100%" class="desktop" onclick="window.location.href='tel:9001566'">
+    <img src="assets/images/mobile.jpg" width="100%" height="100%" class="mobile" hidden="" onclick="window.location.href='tel:9001566'">
     <a href="tel:9001566" type="button" class="btn btn-warning call_to_action">
         سارع بالاتصال و احصل على تفسير حلمك
         <i class="fas fa-phone"></i>
