--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <img src="assets/images/desktop.jpg" width="100%" height="100%" class="desktop" onclick="window.location.href='tel:9001566'">
     <img src="assets/images/mobile.jpg" width="100%" height="100%" class="mobile" hidden="" onclick="window.location.href='tel:9001566'">
     <a href="tel:9001566" type="button" class="btn btn-warning call_to_action">
-        سارع بالاتصال و احصل على تفسير حلمك
+        اتصل الآن
         <i class="fas fa-phone"></i>
     </a>
     <div>
@@ -53,13 +53,13 @@
                 </a>
             </li>
             <li>
-                <a href="https://www.facebook.com/tafseer_ahlamq/">
+                <a href="https://www.facebook.com/Tafsheerahlam01">
                     <i class="fab fa-facebook"></i>
                 </a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/tafseer_ahlamq/">
-                    <i class="fab fa-linkedin"></i>
+                <a href="#">
+                    <i class="fab fa-snapchat-square"></i>
                 </a>
             </li>
         </ul>
