--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://www.twitter.com/tafseer_ahlamq/">
+                <a href="#">
                     <i class="fab fa-twitter"></i>
                 </a>
             </li>
