--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <img src="assets/images/desktop.jpg" width="100%" height="100%" class="desktop" onclick="window.location.href='tel:9001566'">
     <img src="assets/images/mobile.jpg" width="100%" height="100%" class="mobile" hidden="" onclick="window.location.href='tel:9001566'">
     <a href="tel:9001566" type="button" class="btn btn-warning call_to_action">
+        <i class="fas fa-phone-alt"></i>
         اتصل الآن
-        <i class="fas fa-phone"></i>
     </a>
     <div>
         <ul class="social">
@@ -54,12 +54,12 @@
             </li>
             <li>
                 <a href="https://www.facebook.com/Tafsheerahlam01">
-                    <i class="fab fa-facebook"></i>
+                    <i class="fab fa-facebook-f"></i>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <i class="fab fa-snapchat-square"></i>
+                    <i class="fab fa-snapchat-ghost"></i>
                 </a>
             </li>
         </ul>
