--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 </head>
 <body>
 <div class="hero">
-    <img src="assets/images/desktop.jpg" width="100%" height="" class="desktop" onclick="window.location.href='tel:9001566'">
-    <img src="assets/images/mobile.jpg" width="100%" height="" class="mobile" hidden="" onclick="window.location.href='tel:9001566'">
+    <img src="assets/images/desktop.jpg" width="100%" height="100%" class="desktop" onclick="window.location.href='tel:9001566'">
+    <img src="assets/images/mobile.jpg" width="100%" height="100%" class="mobile" hidden="" onclick="window.location.href='tel:9001566'">
     <a href="tel:9001566" type="button" class="btn btn-warning call_to_action">
         <i class="fas fa-phone-alt"></i>
         اتصل الآن
