--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>تفسير رؤيا سمك القرش في المنام</title>
-    <meta name="description" content="تفسير رؤيا سمك القرش في المنام">
+    <title>تفسير الأحلام</title>
+    <meta name="description" content="تفسير الأحلام">
     <meta name="robots" content="index, follow" />
 <!--    <meta http-equiv="refresh" content="5;url='https://dream.brandtechnical.tech/'">-->
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -34,8 +34,22 @@
 </head>
 <body>
 <div class="hero">
-    <img src="assets/images/desktop.jpg" width="100%" height="100%" class="desktop" onclick="window.location.href='tel:9001566'">
-    <img src="assets/images/mobile.jpg" width="100%" height="100%" class="mobile" hidden="" onclick="window.location.href='tel:9001566'">
+    <div class="container">
+
+
+    <div class="logo text-center">
+        <img src="assets/images/logo.png" alt="logo" width="150px" height="150px">
+    </div>
+<!--    <img src="assets/images/desktop.jpg" width="100%" height="100%" class="desktop" onclick="window.location.href='tel:9001566'">-->
+<!--    <img src="assets/images/mobile.jpg" width="100%" height="100%" class="mobile" hidden="" onclick="window.location.href='tel:9001566'">-->
+    <a type="button" href="tel:9001566" class="btn calling">
+        <span><i class="fas fa-phone-square-alt"></i></span>
+        <span>
+            من داخل قطر
+        <br>
+        9 0 0 1 5 6 6
+        </span>
+    </a>
     <a href="tel:9001566" type="button" class="btn btn-warning call_to_action">
         <i class="fas fa-phone-alt"></i>
         اتصل الآن
@@ -63,6 +77,7 @@
                 </a>
             </li>
         </ul>
+    </div>
     </div>
 </div>
 
