--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <title>تفسير الأحلام</title>
@@ -43,16 +43,20 @@
 <!--    <img src="assets/images/desktop.jpg" width="100%" height="100%" class="desktop" onclick="window.location.href='tel:9001566'">-->
 <!--    <img src="assets/images/mobile.jpg" width="100%" height="100%" class="mobile" hidden="" onclick="window.location.href='tel:9001566'">-->
     <a type="button" href="tel:9001566" class="btn calling">
-        <span><i class="fas fa-phone-square-alt"></i></span>
         <span>
             من داخل قطر
         <br>
         9 0 0 1 5 6 6
         </span>
+        <span><i class="fas fa-phone-square-alt"></i></span>
+        <br>
+        <small class="fw-lighter fs-6 text-warning">
+            10 ريــــال للدقــيــقــــة </small>
     </a>
+
     <a href="tel:9001566" type="button" class="btn btn-warning call_to_action">
-        <i class="fas fa-phone-alt"></i>
         اتصل الآن
+        <i class="fas fa-phone-alt"></i>
     </a>
     <div>
         <ul class="social">
