--- a/index.html
+++ b/index.html
@@ -42,20 +42,26 @@
     </div>
 <!--    <img src="assets/images/desktop.jpg" width="100%" height="100%" class="desktop" onclick="window.location.href='tel:9001566'">-->
 <!--    <img src="assets/images/mobile.jpg" width="100%" height="100%" class="mobile" hidden="" onclick="window.location.href='tel:9001566'">-->
-    <a type="button" href="tel:9001566" class="btn calling">
+    <div class="row">
+        <div class="col-lg-6 col-md-12 col-sm-12">
+            <a type="button" href="tel:9001566" class="btn calling">
         <span>
             من داخل قطر
         <br>
         9 0 0 1 5 6 6
         </span>
-        <span><i class="fas fa-phone-square-alt"></i></span>
-    </a>
-        <small class="fw-lighter fs-6 text-warning">
-            10 ريــــال للدقــيــقــــة </small>
-    <a href="tel:9001566" type="button" class="btn btn-warning call_to_action">
-        اتصل الآن
-        <i class="fas fa-phone-alt"></i>
-    </a>
+                <span style="position: relative"><i class="fas fa-phone-square-alt"></i></span>
+            </a>
+            <p class="price fw-lighter fs-6 text-warning">
+                10 ريــــال للدقــيــقــــة </p>
+        </div>
+        <div class="col-lg-6 col-md-12 col-sm-12">
+            <a href="tel:9001566" type="button" class="btn btn-warning call_to_action">
+                اتصل الآن
+                <i class="fas fa-phone-alt"></i>
+            </a>
+        </div>
+    </div>
     <div>
         <ul class="social">
             <li>
